--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,92 @@
-/* You can add global styles to this file, and also import other style files */
+.body {
+    background: rgb(29, 0, 25);
+}
+
+.bg-transparent-dark {
+    background-color: rgba(0, 0, 0, 0.3); 
+}
+
+.logo {
+    font-size: 3rem; 
+    letter-spacing: 10px; 
+    text-transform: uppercase; 
+    color: rgb(191, 107, 191);
+    padding: 100px 0; 
+    text-align: center; 
+    font-weight: 700;
+  }
+
+  @media (max-width: 576px) {
+    .logo {
+      font-size: 2rem; 
+      padding: 40px 0; 
+    }
+  }
+
+  .custom-nav-tabs {
+    text-transform: uppercase; 
+    border-bottom: 3px solid rgb(191, 107, 191); 
+  }
+
+  .custom-nav-tabs .nav-link {
+    color: #fff; 
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .custom-nav-tabs .nav-link.active,
+  .custom-nav-tabs .nav-link:hover {
+    color: #000; 
+    font-weight: 500;
+    background-color: rgb(191, 107, 191);
+    border: 1px solid rgb(191, 107, 191);
+  }
+
+  .footer {
+    font-size: 0.8rem; 
+    color: rgb(191, 107, 191);
+    padding: 30px 0; 
+    text-align: center; 
+  }
+
+.custom-form-control {
+    display: block;
+    width: 100%;
+    padding: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #fff;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: rgba(0, 0, 0, 0.0);
+    background-clip: padding-box;
+    border: 3px solid rgb(191, 107, 191);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.custom-form-control::file-selector-button {
+  padding: 6px 17px;
+  margin: 0;
+  margin-right: 20px;
+  margin-inline-end: 0;
+  color: #000;
+  font-weight: 500;
+  text-transform: uppercase; 
+  pointer-events: none;
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  border-inline-end-width: 0;
+  border-radius: 0; 
+  background-color: rgb(191, 107, 191);
+  transition: background-color .15s ease-in-out;
+}
+
+.custom-form-control:hover:not(:disabled):not([readonly])::file-selector-button {
+  background-color: rgb(171, 87, 171);
+}
+
+.custom-form-control::file-selector-text {
+  padding: 17px;
+}
