--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -65,6 +65,10 @@
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.custom-form-control:hover {
+  border-color: rgb(151, 67, 151);
+}
+
 .custom-form-control::file-selector-button {
   padding: 6px 17px;
   margin: 0;
@@ -84,9 +88,31 @@
 }
 
 .custom-form-control:hover:not(:disabled):not([readonly])::file-selector-button {
-  background-color: rgb(171, 87, 171);
+  background-color: rgb(151, 67, 151);
+  color: #000;
 }
 
 .custom-form-control::file-selector-text {
   padding: 17px;
+}
+
+
+.custom-button [type=submit]:not(:disabled), button:not(:disabled) {
+  cursor: pointer;
+  padding: 6px 17px;
+  color: #000;
+  font-weight: 500;
+  text-transform: uppercase; 
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  border-inline-end-width: 0;
+  border-radius: 0; 
+  background-color: rgb(191, 107, 191);
+  transition: background-color .15s ease-in-out;
+}
+
+.custom-button [type=submit]:not(:disabled):hover, button:not(:disabled):hover {
+  background-color: rgb(151, 67, 151);
+  color: #000;
 }
