--- a/frontend/src/app/main-page/main-page.component.html
+++ b/frontend/src/app/main-page/main-page.component.html
@@ -23,7 +23,7 @@
             </form>
         </div>    
     </div>
-    <div *ngIf="success" class="alert align-items-center text-center custom-alert" role="alert">
+    <div *ngIf="success && !loading" class="alert align-items-center text-center custom-alert" role="alert">
         Rozszerzeniem podanego przez Ciebie pliku o nazwie <b> {{ fileName }} </b> jest: 
         <br>
         <span style="font-size: 1.3rem"><b>{{ response.extension }}</b></span>
