--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-navbar />
 <div class="container">
     <div class="row">
-      <ul class="nav custom-nav-tabs justify-content-center">
+      <ul class="nav custom-nav-tabs flex-column flex-sm-row justify-content-center" style="padding-right: 0;">
         <li class="nav-item">
-          <a class="nav-link px-5" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Magic numbers</a>
+          <a class="nav-link px-5" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Magiczne numery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link px-5" routerLink="/scan" routerLinkActive="active">Skanuj plik</a>
