--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
+<div class="logo">
+  <div class="text">FILE INSIGHT</div>
+</div>
 <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div class="logo">Frontend</div>
-      </div>
+        <div class="alert align-items-center text-center custom-alert2" role="alert"> File Insight pozwala na znalezienie rozszerzenia za pomocą magicznych numerów, przeskanowanie plików, a także porównywanie ich.   </div>
     </div>
   </div>
