--- a/frontend/src/app/main-page/main-page.component.html
+++ b/frontend/src/app/main-page/main-page.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="success && !loading" class="alert align-items-center text-center custom-alert" role="alert">
+    Rozszerzeniem podanego przez Ciebie pliku o nazwie <b> {{ fileName }} </b> jest: 
+    <br>
+    <span style="font-size: 1.3rem"><b>{{ response.extension }}</b></span>
+</div>
+<div class="row justify-content-center">Wybierz plik, aby sprawdzić jego rozszerzenie! <br><br></div> 
 <div class="row justify-content-center">
     <div *ngIf="errorMessage" class="alert alert-danger align-items-center text-center" role="alert">
         <div>
@@ -18,14 +24,9 @@
                     placeholder="Upload File"
                 >
                 <br>
-                <button type="submit" *ngIf="!loading" class="btn custom-button">Wyślij</button>
+                <button type="submit" *ngIf="!loading" class="btn custom-button">Sprawdź</button>
                 <div *ngIf="loading">Wysyłanie...<br><br><i class="fas fa-spinner fa-spin fa-2x"></i></div>
             </form>
         </div>    
-    </div>
-    <div *ngIf="success && !loading" class="alert align-items-center text-center custom-alert" role="alert">
-        Rozszerzeniem podanego przez Ciebie pliku o nazwie <b> {{ fileName }} </b> jest: 
-        <br>
-        <span style="font-size: 1.3rem"><b>{{ response.extension }}</b></span>
     </div>
 </div>
