--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
 .body {
-    background: rgb(29, 0, 25);
+    background: rgb(31, 31, 31);
 }
 
 .bg-transparent-dark {
@@ -7,19 +7,26 @@
 }
 
 .logo {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.3); 
+    border-top: 3px solid rgb(191, 107, 191);
+    border-bottom: 3px solid rgb(191, 107, 191);
+    padding: 30px 0; 
     font-size: 3rem; 
     letter-spacing: 10px; 
     text-transform: uppercase; 
     color: rgb(191, 107, 191);
-    padding: 100px 0; 
-    text-align: center; 
     font-weight: 700;
+    margin: 50px 0;
+    text-align: center; 
   }
+
 
   @media (max-width: 576px) {
     .logo {
       font-size: 2rem; 
-      padding: 40px 0; 
+      padding: 20px 0; 
+      margin: 15px 0;
     }
   }
 
@@ -118,16 +125,31 @@
 }
 
 .custom-alert {
-  background-color: rgb(191, 107, 191) !important;  
-  color: #000 !important; 
+  background-color: rgba(191, 107, 191, 0.1) !important;  
+  color: #fff !important; 
   border-color: rgb(191, 107, 191) !important;
+}
+
+.custom-alert2 {
+  background-color: rgba(0, 0, 0, 0.3) !important;  
+  color: #fff !important; 
+  border-color: rgb(191, 107, 191) !important;
+  margin-bottom: 50px  !important;
+}
+
+@media (max-width: 576px) {
+  .custom-alert2 {
+    margin-bottom: 10px  !important;
+  }
 }
 
 .table {
   background-color: transparent  !important;
+  color: #fff !important;
 }
 
 .table > :not(caption) > * > * {
   background-color: transparent  !important;
-  border-color: #000 !important;
+  border-color: rgb(191, 107, 191) !important;
+  color: #fff !important;
 }
